# CipherTax

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  demo_tax_filing.py  generate_samples.py
examples/output/: optimization_report.txt  redacted_1099.txt  redacted_w2.txt  tax_calculation.json
examples/sample_documents/: tax_summary.csv
marketing/: README.md  awesome_privacy_pr.md  devto_article.md  hackernews.md  linkedin.md  presidio_post.md  reddit_localllama.md  reddit_opensource.md  reddit_privacy.md  reddit_tax.md  twitter.md
src/ciphertax/: __init__.py  cli.py  pipeline.py
src/ciphertax/ai/: __init__.py  claude_client.py
src/ciphertax/detection/: __init__.py  detector.py  tax_recognizers.py
src/ciphertax/extraction/: __init__.py  extractor.py  image_extractor.py  ocr_extractor.py  pdf_extractor.py
src/ciphertax/redaction/: __init__.py  rehydrator.py  tokenizer.py
src/ciphertax/tax/: __init__.py  calculator.py  data_sensitivity.py  forms.py  optimizer.py  questionnaire.py
src/ciphertax/tax/data/: __init__.py  federal_2024.py
src/ciphertax/vault/: __init__.py  secure_vault.py
tests/: __init__.py  conftest.py  test_detection.py  test_integration_edge_cases.py  test_integration_pii_leak.py  test_integration_pipeline.py  test_redaction.py  test_tax_calculator.py  test_vault.py
tests/fixtures/: generate_fixtures.py
